--- a/module-config.yml
+++ b/module-config.yml
@@ -26,6 +26,7 @@ containers:
         - "traefik.http.routers.mqtt_page__ws.rule=PathPrefix(`/ws/mqtt_page`)"
         - "traefik.http.routers.mqtt_page__ws.service=mqtt_page__ws"
         - "traefik.http.services.mqtt_page__ws.loadbalancer.server.port=3000"
+        - "traefik.http.routers.mqtt_page__ws.tls=true"
         - "traefik.http.routers.mqtt_page__ws.entrypoints=websecure"
         - "traefik.enable=true"
         - "traefik.http.routers.mqtt_page_http.rule=PathPrefix(`/modules/mqtt_page`)"
